Updating to aa0798fbfab842848a9c8b8c8063606c2d7dd788.

--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -31,11 +31,11 @@
 <ul class="nav nav-tabs" id="myTab">
 	
 		
-		<li class="active"><a href="#1_sublime_text" data-toggle="tab">Install Sublime Text </a></li>
+		<li class="active"><a href="#1_sublime_text" data-toggle="tab">Sublime Text </a></li>
 		
 	
 		
-		<li><a href="#2_google_chrome" data-toggle="tab">Install Google Chrome </a></li>
+		<li><a href="#2_google_chrome" data-toggle="tab">Google Chrome </a></li>
 		
 	
 		
@@ -43,7 +43,7 @@
 		
 	
 		
-		<li><a href="#4_rails_installer" data-toggle="tab">Install RailsInstaller </a></li>
+		<li><a href="#4_rails_installer" data-toggle="tab">RailsInstaller </a></li>
 		
 	
 </ul>
@@ -54,16 +54,46 @@
 	<div class="tab-pane active" id="1_sublime_text">
 	
 
-		<h2>Install Sublime Text</h2>
-		
+		<h2>Sublime Text</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Download and install the appropriate version of Sublime Text for your computer from <a href=''>http://www.sublimetext.com/</a>.</p>
+</div>
+<h3 id='why_do_i_need_sublime_text'>Why do I need Sublime Text?</h3>
+
+<p>Sublime Text is a <em>text editor</em> - a program that can be used for writing code.</p>
+
+<p>When you write code it is important that the editor stores just the text you wrote, so that it can be properly interpreted when you run it. Word processors, like MS Word, add a lot of extra information to the text you write - layout, font styles, etc. - so can&#8217;t be used for this purpose.</p>
+
+<p>You probably already have a text editor, such as notepad or textedit, on your laptop that could be used for writing code. Sublime Text is better because it also does <em>syntax highlighting</em> - it will colour your code, making it easier to see what&#8217;s going on.</p>
+
+<h3 id='do_i_need_to_pay'>Do I need to pay?</h3>
+
+<p>Sublime Text costs $70 but has an indefinite evaluation period. The duration of the course seems like a pretty reasonable period of time to evaluate the software. If you go on to use it after that you should consider getting a license - it&#8217;s a good product and the guys who make it have to eat!</p>
+
+<h3 id='why_sublime_text'>Why Sublime Text?</h3>
+
+<p>There are many text editors available including many excellent free and/or open source ones. Sublime Text is a popular code editor in the web development world at the moment and benefits from an active community of developers contributing add-ons and improvements. Although it isn&#8217;t free or open source, we have chosen it as our recommended editor as it: (1) gives a good user experience on mac, linux and windows; (2) is easy to get started with; and (3) can be easily customised when you get more advanced.</p>
+
+<p>If have a different text editor that you are already used to using, feel free to use that instead!</p>
 	</div>
 
 	
 	<div class="tab-pane " id="2_google_chrome">
 	
 
-		<h2>Install Google Chrome</h2>
-		
+		<h2>Google Chrome</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Download and install <a href='https://www.google.com/intl/en/chrome/browser/'>Google Chrome</a>.</p>
+</div>
+<h3 id='why_do_i_need_chrome'>Why do I need Chrome?</h3>
+
+<p>Chrome is a free web browser provided by Google. There are several other web browsers that you might have used, including Internet Explorer, Safari, Firefox and Opera. We will be using Chrome as it comes with a good set of developer tools that we will be using over the course.</p>
+
+<p><a href='http://www.mozilla.org/en-US/'>Firefox</a> also comes with an excellent set of developer tools (via its <a href='http://getfirebug.com/'>firebug extension</a>). There doesn&#8217;t seem to be much between Chrome and Firefox+firebug as far as the tools we&#8217;ll be using go. The decision to recommend Chrome was fairly arbitrary, but means that everyone will be using the same software.</p>
 	</div>
 
 	
@@ -71,15 +101,30 @@
 	
 
 		<h2>Github account</h2>
-		
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Sign up for a GitHub account at <a href=''>https://github.com/</a>. Make sure you <strong>know your password</strong> to avoid awkward moments in class!</p>
+</div>
+<h3 id='what_is_github'>What is GitHub?</h3>
+
+<p>GitHub is a site that allows you to share code with others. It basically allows you to put a <em>git repository</em> online. Git is a program that helps with the management of code. If you want, you can <a href='http://git-scm.com/'>find out a bit more about git</a> now - or you can wait until we cover it in the course.</p>
+
+<p>There are several other sites that are similar to GitHub e.g. <a href='https://bitbucket.org'>BitBucket</a>. GitHub is by far the most widely used.</p>
+
+<p>GitHub also allows you to put a static website online for free, using <a href='http://pages.github.com/'>GitHub Pages</a> - another feature that we will be making use of during the course.</p>
 	</div>
 
 	
 	<div class="tab-pane " id="4_rails_installer">
 	
 
-		<h2>Install RailsInstaller</h2>
-		
+		<h2>RailsInstaller</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Go to <a href=''>http://railsinstaller.org/</a></p>
+</div>
 	</div>
 
 </div>
