--- a/html1/index.html
+++ b/html1/index.html
@@ -59,10 +59,6 @@
 		
 	
 		
-		<li><a href="#follow-up" data-toggle="tab">Follow-up </a></li>
-		
-	
-		
 		<li><a href="#preparation" data-toggle="tab">Preparation </a></li>
 		
 	
@@ -142,7 +138,9 @@
 <p>Each computer on the internet has an address (an <em>IP address</em>) so that requests can be sent to it and files returned - much like a telephone number. The backbone of the internet is a network of <em>routers</em> that are responsible for routing files from one IP address to another.</p>
 
 <p>IP addresses are a sequence of numbers and &#8217;.&#8217;s such as <code>212.58.244.67</code>. These aren&#8217;t very easy to remember. Instead the internet works on a domain name system, that matches domain names such as <code>bbc.co.uk</code> to IP addresses.</p>
-<div class='exercise'>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
 <p>Type <code>212.58.244.67</code> into your browser&#8217;s address bar. What happens?</p>
 </div>
 <p>One of the first things that happens when you type a URL into your browser is a <em>DNS lookup</em>: your computer contacts a DNS server (_Domain Name System server_), which is basically a massive address book of IP addresses. The DNS server converts the domain name from the URL (e.g. <code>bbc.co.uk</code>) into an address for a server (such as <code>212.57.244.67</code>).</p>
@@ -263,7 +261,7 @@
 
 <p>There are many different possibilities for text editors. You probably already have one of Notepad or TextEdit on your computer. Sublime Text (and other editors such as NotePad++, Vim, gEdit, ..) will add <em>syntax highlighting</em> for you - they&#8217;ll colour different bits of your progamming language to make it easier to read.</p>
 <div class='exercise alert alert-info'><strong>
-<p>Exercise:</p>
+<p>Task:</p>
 </strong>
 <ol>
 <li>
@@ -281,6 +279,8 @@
 </li>
 </ol>
 </div>
+<p>TODO: Why index.html</p>
+
 <p>This is your first real html tag. It has an open and a close. It tells it to be a heading.</p>
 	</div>
 
@@ -306,14 +306,7 @@
 </li>
 </ol>
 </div>
-	</div>
-
-	
-	<div class="tab-pane " id="follow-up">
-	
-
-		<h2>Follow-up</h2>
-		
+<p>TODO: more about file paths in href</p>
 	</div>
 
 	
