--- a/html3/index.html
+++ b/html3/index.html
@@ -138,7 +138,7 @@
 <span class='nc'>.product_item</span> <span class='p'>{</span> <span class='k'>color</span><span class='o'>:</span> <span class='nb'>blue</span><span class='p'>;</span> <span class='p'>}</span>
 </code></pre></div><!-- <div class='exercise alert alert-info' markdown="1">
  --><div class='exercise alert alert-info'><strong>
-<p>Exercise:</p>
+<p>Task:</p>
 </strong>
 <ol>
 <li>
@@ -196,7 +196,7 @@ git commit -m &quot;Description of changes&quot;</code></pre>
 
 <span class='nt'>&lt;/html&gt;</span>
 </code></pre></div><div class='exercise alert alert-info'><strong>
-<p>Exercise:</p>
+<p>Task:</p>
 </strong>
 <ol>
 <li>
