--- a/html4/index.html
+++ b/html4/index.html
@@ -53,7 +53,7 @@
 		<h2>Getting code from Github</h2>
 		<p>In previous sessions we&#8217;ve used git to pull code down from github. We&#8217;re going to start this session by doing the same again:</p>
 <div class='exercise alert alert-info'><strong>
-<p>Exercise:</p>
+<p>Task:</p>
 </strong>
 <ol>
 <li>
@@ -75,9 +75,13 @@
 
 <p>to pull them down onto your laptop.</p>
 <div class='exercise alert alert-info'><strong>
-<p>Exercise:</p>
+<p>Task:</p>
 </strong>
 <ol>
+<li>
+<p>Open <code>toms_site/index.html</code> in Sublime Text</p>
+</li>
+
 <li>
 <p>Wait for me to make a change and push it to gihub</p>
 </li>
@@ -97,7 +101,7 @@
 
 		<h2>Conflicts</h2>
 		<div class='exercise alert alert-info'><strong>
-<p>Exercise:</p>
+<p>Task:</p>
 </strong>
 <ol>
 <li>
@@ -131,7 +135,7 @@
 <pre><code>git add .
 git commit -m &quot;Fixed conflicts&quot;</code></pre>
 <div class='exercise alert alert-info'><strong>
-<p>Exercise:</p>
+<p>Task:</p>
 </strong>
 <ol>
 <li>
@@ -159,7 +163,7 @@ git commit -m &quot;Fixed conflicts&quot;</code></pre>
 		<h2>Joint project</h2>
 		<p>For this part you will need to be in groups of at least two.</p>
 <div class='exercise alert alert-info'><strong>
-<p>Exercise:</p>
+<p>Task:</p>
 </strong>
 <ol>
 <li>
@@ -182,7 +186,7 @@ git commit -m &quot;Initial import&quot;</code></pre>
 </li>
 
 <li>
-<p>Person A creates a new repo on github. To do this you need to log in at <a href='github.com'>github.com</a> and select &#8220;Create a new repo&#8221;. You should call the repository <code>group_project</code>.</p>
+<p>Person A creates a new repo on github. To do this you need to log in at <a href='http://github.com'>github.com</a> and select &#8220;Create a new repo&#8221;. You should call the repository <code>group_project</code>.</p>
 </li>
 
 <li>
