--- a/html5/index.html
+++ b/html5/index.html
@@ -71,7 +71,7 @@
 		<h2>Mixpanel Analytics</h2>
 		<p><a href='mixpanel.com'>Mixpanel</a> offer a different analytics service to google. Like Google Analytics, you can use the service by including a snippet of javascript on your page.</p>
 <div class='exercise alert alert-info'><strong>
-<p>Exercise:</p>
+<p>Task:</p>
 </strong>
 <p>See if you can work out how to add Mixpanel analytics to your page</p>
 </div>
