--- a/plan.html
+++ b/plan.html
@@ -23,17 +23,17 @@
 
   <div class="container">
 
-    <div class='table'><table><thead><tr><th>Session</th><th>Content</th></tr></thead><tbody><tr><td style='text-align: left;'>hwk 0</td><td style='text-align: left;'>Install Sublime text, chrome, railsinstaller. Read about HTML.</td>
-</tr><tr><td style='text-align: left;'>1.1.1</td><td style='text-align: left;'>Ice breaker (30 mins), <strong>html1</strong>: IP addresses inc. command line, URL, DNS</td>
+    <div class='table'><table><thead><tr><th>Session</th><th>Content</th></tr></thead><tbody><tr><td style='text-align: left;'><a href='/hmwk0'>hwk 0</a></td><td style='text-align: left;'>Install Sublime text, chrome, railsinstaller. Read about HTML.</td>
+</tr><tr><td style='text-align: left;'><a href='/html1'>1.1.1</a></td><td style='text-align: left;'>Ice breaker (30 mins), <strong>html1</strong>: IP addresses inc. command line, URL, DNS</td>
 </tr><tr><td style='text-align: left;'>1.1.2</td><td style='text-align: left;'>HTML, navigating command line</td>
 </tr><tr><td style='text-align: left;'>hwk 1.1</td><td style='text-align: left;'>HTML exercise inc. read resources. Read about git. Buy domain name. Try ruby.</td>
-</tr><tr><td style='text-align: left;'>1.2.1</td><td style='text-align: left;'><strong>html2</strong>: Using git, push to github, CSS</td>
+</tr><tr><td style='text-align: left;'><a href='/html2'>1.2.1</a></td><td style='text-align: left;'><strong>html2</strong>: Using git, push to github, CSS</td>
 </tr><tr><td style='text-align: left;'>1.2.2</td><td style='text-align: left;'><strong>ruby1</strong>: files, irb, sums, variables, strings, puts? (inc. pull from github)</td>
 </tr><tr><td style='text-align: left;'>hwk 1.2</td><td style='text-align: left;'>Ruby exercises. Add CSS to site. Practise pushing. Git tutorial.</td>
-</tr><tr><td style='text-align: left;'>2.1.1</td><td style='text-align: left;'><strong>html3</strong>: css recap, selectors, twitter bs, github pages</td>
+</tr><tr><td style='text-align: left;'><a href='/html3'>2.1.1</a></td><td style='text-align: left;'><strong>html3</strong>: css recap, selectors, twitter bs, github pages</td>
 </tr><tr><td style='text-align: left;'>2.1.2</td><td style='text-align: left;'><strong>ruby2</strong>: methods &amp; scope, if, booleans &amp; operations, case</td>
 </tr><tr><td style='text-align: left;'>hwk 2.1</td><td style='text-align: left;'>Ruby exercises. Read about CSS &amp; and to site. Custom domain to ghp.</td>
-</tr><tr><td style='text-align: left;'>2.2.1</td><td style='text-align: left;'><strong>html4</strong>: collaboration</td>
+</tr><tr><td style='text-align: left;'><a href='/html4'>2.2.1</a></td><td style='text-align: left;'><strong>html4</strong>: collaboration</td>
 </tr><tr><td style='text-align: left;'>2.2.2</td><td style='text-align: left;'><strong>ruby3</strong>: iterating, each, arrays (as something you can iterate over), mention blocks</td>
 </tr><tr><td style='text-align: left;'>hwk 2.2</td><td style='text-align: left;'>Ruby exercises. Do more collaboration. Reading on web form.</td>
 </tr><tr><td style='text-align: left;'>3.1.1</td><td style='text-align: left;'><strong>lp1</strong>: setting up etc., form using github</td>
