Updating to aa0798fbfab842848a9c8b8c8063606c2d7dd788.

--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -46,6 +46,10 @@
 		<li><a href="#4_rails_installer" data-toggle="tab">RailsInstaller </a></li>
 		
 	
+		
+		<li><a href="#5_reading" data-toggle="tab">Reading </a></li>
+		
+	
 </ul>
 
 <div class="tab-content">
@@ -124,6 +128,18 @@
 <p>Task:</p>
 </strong>
 <p>Go to <a href=''>http://railsinstaller.org/</a></p>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="5_reading">
+	
+
+		<h2>Reading</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Do the &#8220;1 Introduction to HTML&#8221; from the <a href='http://www.codecademy.com/tracks/web'>Codecademy web track</a></p>
 </div>
 	</div>
 
