--- a/ruby1/index.html
+++ b/ruby1/index.html
@@ -30,9 +30,46 @@
 <div class="tabbable tabs-left">
 <ul class="nav nav-tabs" id="myTab">
 	
+		
+		<li class="active"><a href="#1_hello" data-toggle="tab">Hello! </a></li>
+		
+	
 </ul>
 
 <div class="tab-content">
+
+	
+	<div class="tab-pane active" id="1_hello">
+	
+
+		<h2>Hello!</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>
+<p>Navigate to your <code>coding_course</code> folder in the Terminal</p>
+</li>
+
+<li>
+<p>Clone the repo for this session:</p>
+
+<pre><code>git clone ...</code></pre>
+</li>
+
+<li>
+<p>Open the file <code>coding_course/ruby_1/hello.rb</code> in Sublime Text</p>
+</li>
+
+<li>
+<p>In the Terminal move into the <code>ruby_1</code> folder and run the <code>hello.rb</code> file:</p>
+
+<pre><code>cd ruby_1
+ruby hello.rb</code></pre>
+</li>
+</ol>
+</div>
+	</div>
 
 </div>
 
