--- a/ruby_plan.html
+++ b/ruby_plan.html
@@ -84,7 +84,7 @@
 
 <li>introduce other form of block</li>
 
-<li><span>&#8216;pizza&#8217;, &#8216;pasta&#8217;</span>.each {| | } , to introduce arrays</li>
+<li><span>&#8216;pizza&#8217;, &#8216;pasta&#8217;</span>.each { | | } , to introduce arrays</li>
 
 <li>look at other methods on arrays a<span>1..-1</span>.each</li>
 
@@ -95,6 +95,8 @@
 <li>filtering arrays</li>
 
 <li>sorting arrays (meeting blocks again)</li>
+
+<li>extension hmwk two_of_each (meet yield)</li>
 </ul>
 
 <h2 id='ruby_4_hashes_converting_to_hashes_csv'>Ruby 4: hashes, converting to hashes, CSV</h2>
@@ -121,6 +123,18 @@
 <li>classes as data and methods</li>
 
 <li>characters, setting bart.father= homer, could also set homer.children &#171;&#160;bart</li>
+</ul>
+
+<h2 id='still_to_do'>Still to do</h2>
+
+<ul>
+<li>modules</li>
+
+<li>yield</li>
+
+<li>begin/rescue</li>
+
+<li>eigenclass stuff?</li>
 </ul>
 
 
