--- a/plan.html
+++ b/plan.html
@@ -40,39 +40,39 @@
 </tr><tr><td style='text-align: left;'>3.1.2</td><td style='text-align: left;'><strong>ruby4</strong>: hashes, converting arrays to hashes, CSV?</td>
 </tr><tr><td style='text-align: left;'>hwk 3.1</td><td style='text-align: left;'>Ruby exercises. Work on landing page.</td>
 </tr><tr><td style='text-align: left;'>3.2.1</td><td style='text-align: left;'><strong>lp2</strong>: analytics/AB testing?</td>
-</tr><tr><td style='text-align: left;'>3.2.2</td><td style='text-align: left;'><strong>ruby5</strong>: classes?</td>
+</tr><tr><td style='text-align: left;'>3.2.2</td><td style='text-align: left;'><strong>ruby5</strong>: classes</td>
 </tr><tr><td style='text-align: left;'>hwk 3.2</td><td style='text-align: left;'>Ruby exercises. Finish landing page.</td>
 </tr><tr><td style='text-align: left;'>4.1.1</td><td style='text-align: left;'><strong>js1</strong>:</td>
-</tr><tr><td style='text-align: left;'>4.1.2</td><td style='text-align: left;'><strong>ruby6</strong>: yield?</td>
+</tr><tr><td style='text-align: left;'>4.1.2</td><td style='text-align: left;'><strong>ruby6</strong>: normalised data, activerecord (inc intro to rubygems)</td>
 </tr><tr><td style='text-align: left;'>hwk 4.1</td><td style='text-align: left;'>-</td>
 </tr><tr><td style='text-align: left;'>4.2.1</td><td style='text-align: left;'><strong>js2</strong>:</td>
-</tr><tr><td style='text-align: left;'>4.2.2</td><td style='text-align: left;'><strong>ruby7</strong>: modules?</td>
+</tr><tr><td style='text-align: left;'>4.2.2</td><td style='text-align: left;'><strong>ruby7</strong>: more activerecord</td>
 </tr><tr><td style='text-align: left;'>hwk 4.2</td><td style='text-align: left;'>-</td>
 </tr><tr><td style='text-align: left;'>5.1.1</td><td style='text-align: left;'><strong>js3</strong>:</td>
-</tr><tr><td style='text-align: left;'>5.1.2</td><td style='text-align: left;'><strong>fruby1</strong>: bundler?</td>
-</tr><tr><td style='text-align: left;'>hwk 5.1</td><td style='text-align: left;'>-</td>
+</tr><tr><td style='text-align: left;'>5.1.2</td><td style='text-align: left;'><strong>ruby8</strong>: bundler, sinatra &amp; responding to web requests</td>
+</tr><tr><td style='text-align: left;'>hwk 5.1</td><td style='text-align: left;'>push sinatra to heroku?</td>
 </tr><tr><td style='text-align: left;'>5.2.1</td><td style='text-align: left;'><strong>js4</strong>:</td>
-</tr><tr><td style='text-align: left;'>5.2.2</td><td style='text-align: left;'><strong>fruby2</strong>: sinatra</td>
+</tr><tr><td style='text-align: left;'>5.2.2</td><td style='text-align: left;'><strong>ruby9</strong>: sinatra with templates</td>
 </tr><tr><td style='text-align: left;'>hwk 5.2</td><td style='text-align: left;'>-</td>
 </tr><tr><td style='text-align: left;'>6.1.1</td><td style='text-align: left;'><strong>js5</strong>:</td>
-</tr><tr><td style='text-align: left;'>6.1.2</td><td style='text-align: left;'><strong>fruby3</strong>: databases/activerecord</td>
+</tr><tr><td style='text-align: left;'>6.1.2</td><td style='text-align: left;'><strong>ruby10</strong>: interacting with an api</td>
 </tr><tr><td style='text-align: left;'>hwk 6.1</td><td style='text-align: left;'>-</td>
 </tr><tr><td style='text-align: left;'>6.2.1</td><td style='text-align: left;'><strong>js6</strong>:</td>
-</tr><tr><td style='text-align: left;'>6.2.2</td><td style='text-align: left;'><strong>fruby4</strong>:</td>
+</tr><tr><td style='text-align: left;'>6.2.2</td><td style='text-align: left;'><strong>ruby11</strong>: bringing all the ruby stuff together</td>
 </tr><tr><td style='text-align: left;'>hwk 6.2</td><td style='text-align: left;'>-</td>
-</tr><tr><td style='text-align: left;'>7.1.1</td><td style='text-align: left;'><strong>rails1</strong>:</td>
-</tr><tr><td style='text-align: left;'>7.1.2</td><td style='text-align: left;'><strong>rails2</strong>:</td>
+</tr><tr><td style='text-align: left;'>7.1.1</td><td style='text-align: left;'><strong>rails1</strong>: 1st project - setting up a rails app</td>
+</tr><tr><td style='text-align: left;'>7.1.2</td><td style='text-align: left;'><strong>rails2</strong>: 1st project cont</td>
 </tr><tr><td style='text-align: left;'>hwk 7.1</td><td style='text-align: left;'>-</td>
-</tr><tr><td style='text-align: left;'>7.2.1</td><td style='text-align: left;'><strong>jsapp1</strong>:</td>
+</tr><tr><td style='text-align: left;'>7.2.1</td><td style='text-align: left;'><strong>jsapp1</strong>: 1st angular project - intro to angular, pub or coffee?</td>
 </tr><tr><td style='text-align: left;'>7.2.2</td><td style='text-align: left;'><strong>jsapp2</strong>:</td>
 </tr><tr><td style='text-align: left;'>hwk 7.2</td><td style='text-align: left;'>-</td>
-</tr><tr><td style='text-align: left;'>8.1.1</td><td style='text-align: left;'><strong>rails3</strong>:</td>
+</tr><tr><td style='text-align: left;'>8.1.1</td><td style='text-align: left;'><strong>rails3</strong>: 2nd project</td>
 </tr><tr><td style='text-align: left;'>8.1.2</td><td style='text-align: left;'><strong>rails4</strong>:</td>
 </tr><tr><td style='text-align: left;'>hwk 8.1</td><td style='text-align: left;'>-</td>
-</tr><tr><td style='text-align: left;'>8.2.1</td><td style='text-align: left;'><strong>jsapp3</strong>:</td>
+</tr><tr><td style='text-align: left;'>8.2.1</td><td style='text-align: left;'><strong>jsapp3</strong>: 2nd angular project</td>
 </tr><tr><td style='text-align: left;'>8.2.2</td><td style='text-align: left;'><strong>jsapp4</strong>:</td>
 </tr><tr><td style='text-align: left;'>hwk 8.2</td><td style='text-align: left;'>-</td>
-</tr><tr><td style='text-align: left;'>9.1.1</td><td style='text-align: left;'><strong>rails5</strong>:</td>
+</tr><tr><td style='text-align: left;'>9.1.1</td><td style='text-align: left;'><strong>rails5</strong>: 3rd project - with angular</td>
 </tr><tr><td style='text-align: left;'>9.1.2</td><td style='text-align: left;'><strong>rails6</strong>:</td>
 </tr><tr><td style='text-align: left;'>hwk 9.1</td><td style='text-align: left;'>-</td>
 </tr><tr><td style='text-align: left;'>9.2.1</td><td style='text-align: left;'><strong>jsapp5</strong>:</td>
