Updating to 76ffa0b4719e3b90fece067b3c4a142141757c48.

--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>hmwk0</title>
+  <title>Course Preparation</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -14,9 +14,10 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/css/main.css">
 
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="/assets/jquery-1.10.0.js"></script>
 
   <script type="text/javascript" src='/bootstrap/js/bootstrap.js'></script>
+  <script type="text/javascript" src='/assets/custom.js'></script>
 
 </head>
 <body>
@@ -24,7 +25,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>hmwk0 <small></small></h1>
+  <h1>Course Preparation <small>Getting you set up and ready to go!</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -108,7 +109,7 @@
 		<div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
-<p>Sign up for a GitHub account at <a href=''>https://github.com/</a>. Make sure you <strong>know your password</strong> to avoid awkward moments in class!</p>
+<p>Sign up for a GitHub account at <a href='https://github.com/'>https://github.com/</a>. Make sure you <strong>know your password</strong> to avoid awkward moments in class!</p>
 </div>
 <h3 id='what_is_github'>What is GitHub?</h3>
 
@@ -127,8 +128,11 @@
 		<div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
-<p>Go to <a href=''>http://railsinstaller.org/</a></p>
+<p>Go to <a href='http://railsinstaller.org/'>http://railsinstaller.org/</a> and follow the instructions for your operating system (choosing all the defaults they give).</p>
 </div>
+<p>At the final stage, there will be a tick box asking if you want to &#8220;Configure git and ssh&#8221;. Make sure this box is ticked. Follow the instructions and fill in your name and email (this is only used for your git commits).</p>
+
+<p>It will also tell you something about having copied your ssh key to the clipboard.</p>
 	</div>
 
 	
