--- a/html1/index.html
+++ b/html1/index.html
@@ -14,9 +14,10 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/css/main.css">
 
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="/assets/jquery-1.10.0.js"></script>
 
   <script type="text/javascript" src='/bootstrap/js/bootstrap.js'></script>
+  <script type="text/javascript" src='/assets/custom.js'></script>
 
 </head>
 <body>
@@ -63,7 +64,7 @@
 	
 
 		<h2>Introducing the URL</h2>
-		<p>Many of our web interactions begin with a URL (_uniform resource locator_) being typed into our web browser address bar. Let&#8217;s look at an example: <code>http://www.bbc.co.uk/news/</code>.</p>
+		<p>Many of our web interactions begin with a URL (<em>uniform resource locator</em>) being typed into our web browser address bar. Let&#8217;s look at an example: <code>http://www.bbc.co.uk/news/</code>.</p>
 
 <p>This URL has several different parts to it:</p>
 
