--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -63,7 +63,7 @@
 		<div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
-<p>Download and install the appropriate version of Sublime Text for your computer from <a href=''>http://www.sublimetext.com/</a>.</p>
+<p>Download and install the appropriate version of Sublime Text for your computer from <a href='http://www.sublimetext.com/'>http://www.sublimetext.com/</a>.</p>
 </div>
 <h3 id='why_do_i_need_sublime_text'>Why do I need Sublime Text?</h3>
 
