Updating to 76ffa0b4719e3b90fece067b3c4a142141757c48.

--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -48,7 +48,11 @@
 		
 	
 		
-		<li><a href="#5_reading" data-toggle="tab">Reading </a></li>
+		<li><a href="#5_ssh_keys" data-toggle="tab">SSH keys </a></li>
+		
+	
+		
+		<li><a href="#6_reading" data-toggle="tab">Reading </a></li>
 		
 	
 </ul>
@@ -130,13 +134,27 @@
 </strong>
 <p>Go to <a href='http://railsinstaller.org/'>http://railsinstaller.org/</a> and follow the instructions for your operating system (choosing all the defaults they give).</p>
 </div>
+<p>On windows:</p>
+
 <p>At the final stage, there will be a tick box asking if you want to &#8220;Configure git and ssh&#8221;. Make sure this box is ticked. Follow the instructions and fill in your name and email (this is only used for your git commits).</p>
 
 <p>It will also tell you something about having copied your ssh key to the clipboard.</p>
+
+<p>On Mac:</p>
+
+<p>You then need to do ssh upload.</p>
 	</div>
 
 	
-	<div class="tab-pane " id="5_reading">
+	<div class="tab-pane " id="5_ssh_keys">
+	
+
+		<h2>SSH keys</h2>
+		
+	</div>
+
+	
+	<div class="tab-pane " id="6_reading">
 	
 
 		<h2>Reading</h2>
