--- a/ruby1/index.html
+++ b/ruby1/index.html
@@ -35,6 +35,14 @@
 		<li class="active"><a href="#1_hello" data-toggle="tab">Hello! </a></li>
 		
 	
+		
+		<li><a href="#2_reading_ruby" data-toggle="tab">Reading ruby </a></li>
+		
+	
+		
+		<li><a href="#3_irb" data-toggle="tab">Interactive ruby </a></li>
+		
+	
 </ul>
 
 <div class="tab-content">
@@ -69,6 +77,90 @@
 ruby hello.rb</code></pre>
 </li>
 </ol>
+</div>
+<p>You should see the word &#8216;Hello&#8217; printed to the terminal.</p>
+
+<h3 id='what_just_happened'>What just happened?</h3>
+
+<p>The first few steps were just to pull the code down from the online repository (using git). We&#8217;ll focus on steps 3 and 4. The file <code>hello.rb</code> contained some code in a language called ruby:</p>
+<div class='highlight'><pre><code class='ruby'><span class='c1'># print &#39;Hello&#39; to the screen</span>
+<span class='nb'>puts</span> <span class='s2'>&quot;Hello&quot;</span>
+</code></pre></div>
+<h4 id='comments'>Comments</h4>
+
+<p>The first line is a comment - it doesn&#8217;t do anything. You should always comment your code, as it helps you (and others) understand what is going on when you come back to look at it later. Any text on a line that comes after a <code>#</code> is a comment:</p>
+<div class='highlight'><pre><code class='ruby'><span class='c1'># this whole line is a comment</span>
+
+<span class='nb'>puts</span> <span class='s2'>&quot;hello&quot;</span>  <span class='c1'># this is a comment too</span>
+
+<span class='cm'>=begin</span>
+<span class='cm'>Any lines between a line beginning =begin and</span>
+<span class='cm'>a line beginning =end are also treated as a comment.</span>
+<span class='cm'>This style of commenting doesn&#39;t seem to be used that</span>
+<span class='cm'>much in The Wild.</span>
+<span class='cm'>=end</span>
+</code></pre></div>
+<h4 id='puts_and_strings'>Puts and strings</h4>
+
+<p>The second line is where the magic is. <code>puts</code> stands for &#8220;put string&#8221;. A <em>string</em> is a programming term that is used to describe what you would probably call a piece of text. The second line prints the string &#8220;Hello&#8221; to the terminal.</p>
+
+<h4 id='running_the_program'>Running the program</h4>
+
+<p>For the program to run we needed to call it using <code>ruby hello.rb</code>. <code>ruby</code> is a command line program that interprets and runs ruby files. When the ruby program gets to the end of the file it exits, giving you control of the command line again.</p>
+
+<p>We say that ruby is an <em>interpreted</em> language - the ruby file is read in and executed in real time. Python, matlab and lisp are other interpreted languages that you might have heard of. You might also have come across <em>compiled</em> languages such as c, c++ and (to some extent) java. These languages require a pre-processing stage (called <em>compiling</em>) in order to turn the code into a program that the computer can run.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Modify <code>hello.rb</code>, so that the program will print out &#8220;Hello, your-name&#8221;. Run the program from the command line to check that it works.</p>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="2_reading_ruby">
+	
+
+		<h2>Reading ruby</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>
+<p>Open the file <code>ruby1/times.rb</code> in Sublime Text.</p>
+</li>
+
+<li>
+<p>What do you think this program does?</p>
+</li>
+
+<li>
+<p>Run the program to see if you&#8217;re right:</p>
+
+<pre><code>ruby times.rb</code></pre>
+</li>
+</ol>
+</div>
+<p><code>times.rb</code> contains the single line:</p>
+<div class='highlight'><pre><code class='ruby'> 
+<span class='p'>(</span><span class='mi'>1</span><span class='o'>.</span><span class='n'>.</span><span class='mi'>12</span><span class='p'>)</span><span class='o'>.</span><span class='n'>each</span> <span class='p'>{</span> <span class='o'>|</span><span class='n'>number</span><span class='o'>|</span> <span class='nb'>puts</span> <span class='mi'>3</span> <span class='o'>*</span> <span class='n'>number</span> <span class='p'>}</span>
+</code></pre></div>
+<p>We&#8217;re not going to worry about precisely how the instruction works at the moment - we&#8217;ll learn about this in detail over the next few sessions. The point of this exercise was to begin to show you why ruby is great.</p>
+
+<p>It is often possible to write ruby in a way that reads a lot like English. Hopefully you found this with the above example - even though you&#8217;ve only just met ruby you were probably able to have a reasonably guess at what the above code did.</p>
+
+<p>Ruby is an incredibly powerful and flexible language. It is a modern language - created in the 1990s by Matzumoto &#8230;. (Matz). A large part of his design philosophy is centered around optimizing for developer happiness - making a language that is a pleasure to program in. If you haven&#8217;t already programmed in another language, you might not fully appreciate this, but - take it from me - ruby is awesome!</p>
+	</div>
+
+	
+	<div class="tab-pane " id="3_irb">
+	
+
+		<h2>Interactive ruby</h2>
+		<p>One of the great things about an interpreted language is that it&#8217;s often possible to interact with the interpreter in real time.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>On the command line type <code>irb</code> to enter an interactive ruby session.</p>
 </div>
 	</div>
 
