Updating to 76ffa0b4719e3b90fece067b3c4a142141757c48.

--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -79,7 +79,7 @@
 
 <h3 id='do_i_need_to_pay'>Do I need to pay?</h3>
 
-<p>Sublime Text costs $70 but has an indefinite evaluation period. The duration of the course seems like a pretty reasonable period of time to evaluate the software. If you go on to use it after that you should consider getting a license - it&#8217;s a good product and the guys who make it have to eat!</p>
+<p>Sublime Text costs $70 but has an indefinite evaluation period - <strong>you can use it for free</strong>, until you become crippled by guilt. The duration of the course seems like a pretty reasonable period of time to evaluate the software. If you go on to use it after that you should consider getting a license - it&#8217;s a good product and the guys who make it have to eat!</p>
 
 <h3 id='why_sublime_text'>Why Sublime Text?</h3>
 
